# zecminer

./: .gitignore  CLAUDE.md  MINERS_RESEARCH.md  README.md  architecture.md  autotune.ps1  benchmark_raw.txt  build.bat  build_blackwell.bat  configure.bat  dobuild.bat  mine.bat  mine_bw.bat  mine_template.bat  optimization_results.md  run_benchmarks.bat  test_blackwell.bat
nheqminer/: CMakeLists.txt
nheqminer/cpu_tromp/: equi.h
nheqminer/cuda_blackwell/: CMakeLists.txt  blake2b.cuh  bucket_layout.hpp  cuda_blackwell.cpp  cuda_blackwell.hpp  digit_kernels.cu  eq_context.hpp  pipeline.hpp
nheqminer/cuda_djezo/: CMakeLists.txt  cuda_djezo.cpp  equi_miner.cu
nheqminer/cuda_tromp/: CMakeLists.txt  cuda_tromp.cpp  cuda_tromp.hpp  equi_miner.cu
nheqminer/nheqminer/: AvailableSolvers.h  MinerFactory.cpp  MinerFactory.h  api.cpp  api.hpp  main.cpp
nheqminer/nheqminer/libstratum/: StratumClient.cpp  StratumClient.h  ZcashStratum.cpp
release/: autotune.bat  mine.bat
